fixed margin with customer reviews so it doesnt overlap the footer set to 30%

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,7 +91,7 @@ footer {
   bottom: 0vh;
   padding: 0;
   text-align: center;
-
+  margin-top: auto;
   width: 100%;
 }
 
@@ -102,6 +102,7 @@ footer {
   list-style-type: none;
   text-decoration: none;
   justify-content: center;
+  position: relative;
 }
 
 .social-footer ul {
@@ -134,11 +135,17 @@ footer {
 
 /*intro page*/
 
-.intro-container {
-  margin: 150px auto;
-  width: 60%;
+.intro-img {
+  width: 100%;
+  margin: auto;
+  overflow-x: hidden;
+  position: relative;
+}
 
-  bottom: 100px;
+.intro-container {
+  margin: auto;
+  width: 70%;
+  bottom: 50%;
   position: relative;
   justify-content: center;
   overflow-x: hidden;
@@ -150,15 +157,6 @@ footer {
 .intro-text {
   color: #ffffff;
   background-color: rgba(26, 24, 21, 0.733);
-}
-
-.intro-container img {
-  position: relative;
-
-  float: left;
-  height: 200px;
-  width: 150px;
-  padding: 0 10px 0 0;
 }
 
 /* packages page */
@@ -323,18 +321,22 @@ div.scroll-container {
     margin: 0;
     padding: 5px;
     text-align: center;
+    overflow-x: hidden;
   }
 
   .customer-reviews {
     background-color: rgba(26, 24, 21, 0.733);
     position: relative;
     margin: 5%;
-    height: 50%;
-    bottom: 150px;
+
+    margin-bottom: 30%;
+    height: 60%;
+    bottom: 50%;
     padding: 5px;
-    font-size: medium;
+    font-size: small;
     color: #ffffff;
     border-radius: 10px;
+    overflow-y: scroll;
 
     text-align: center;
   }
